compiler/tests/fa/errors/ternary_mismatch.salam
// انتظار: خطا۰۲۱
// زبان: فارسی
تابع اصلی:
    ی := درست ؟ 2 : "س"
    چاپ ی
تمام
